--- a/style.css
+++ b/style.css
@@ -72,8 +72,6 @@ footer > h3 {
 /* modal */
 .modal {
   display: none; /* Hidden by default */
-  justify-content: center;
-  align-items: center;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   width: min(375px, 40%);
@@ -92,6 +90,7 @@ footer > h3 {
   display: flex;
   flex-direction: column;
   width: min(350px, 100%);
+  margin: 0 auto;
   gap: 1rem;
 }
 
@@ -111,12 +110,12 @@ footer > h3 {
   color: #4B4B4B;
 }
 
-.button_submit:hover, .feed-form input:hover {
+.button-submit:hover, .feed-form input:hover {
   transform: scale(1.009);
   box-shadow: 0px 0px 3px 0px #212529;
 }
 
-.button_submit {
+.button-submit {
   height: 54px;
   font-size: 14px;
   color: white;
@@ -145,6 +144,10 @@ footer > h3 {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.overlay.active {
+.error-msg {
+  display: none;
+}
+
+:is(.active) {
   display: block;
 }
