--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ header
 .container
 {
   display: flex;
+  align-items: center;
+  gap: 1rem;
   flex-direction: column;
 }
 
@@ -45,11 +47,17 @@ header
 .book-container
 {
   display: grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-rows: auto;
+  gap: 1rem ;
+  width: 90%;
+  border: 1px solid red;
 }
 
 .book
 {
-
+  display: flex;
+  flex-direction: column;
 }
 
 /*footer*/
