--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: aliceblue;
+  background-color: black;
 }
 
 .button
@@ -33,31 +33,90 @@ header
 .container
 {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 1rem;
-  flex-direction: column;
 }
 
 #add-book
 {
-  align-self: center;
   width: min(7.5rem, 25%);
 }
 
 .book-container
 {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 250px);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: auto;
+  justify-content: center;
   gap: 1rem ;
   width: 90%;
-  border: 1px solid red;
 }
 
-.book
-{
+.card {
+  position: relative;
+  width: 190px;
+  height: 254px;
+  background-color: #000;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  padding: 12px;
+  gap: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.card > p {
+  margin: 0;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  left: -5px;
+  margin: auto;
+  width: 200px;
+  height: 264px;
+  border-radius: 10px;
+  background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100% );
+  z-index: -10;
+  pointer-events: none;
+  transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.card::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+  transform: translate3d(0, 0, 0) scale(0.95);
+  filter: blur(20px);
+}
+
+.heading {
+  font-size: 20px;
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+.card p:not(.heading) {
+  font-size: 14px;
+}
+
+.card p:last-child {
+  color: #e81cff;
+  font-weight: 600;
+}
+
+.card:hover::after {
+  filter: blur(30px);
+}
+
+.card:hover::before {
+  transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
 }
 
 /*footer*/
