--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+html {
+    --header-ht: 15vh;
+    --footer-ht: 10vh;
+    --main-ht: calc(100vh - var(--footer-ht) - var(--header-ht));
+
+}
+
 [data-theme="light"]{
   --color-bg: #ffffff;
   --color-fg: #000000;
@@ -15,6 +22,9 @@
 
 body
 {
+    display: flex;
+  flex-direction: column;
+  height: 100vh;
   background-color: var(--color-bg);
   color: var(--color-fg);
   margin: 0;
@@ -31,10 +41,14 @@ header
   justify-content: space-around;
   align-items: center;
   background-color: black;
+  height: var(--header-ht);
 }
 
 /* main */
-
+main {
+    flex-grow: 1;
+    max-height: var(--main-ht);
+}
 .container
 {
   display: flex;
@@ -112,8 +126,11 @@ header
   grid-template-columns: repeat(auto-fit, 250px);
   grid-template-rows: auto;
   justify-content: center;
+  overflow-y: auto;
   gap: 1rem ;
   width: 90%;
+  height: calc(var(--main-ht) - 60px);
+  scrollbar-gutter: stable;
 }
 
 .card {
@@ -162,14 +179,12 @@ header
 /*footer*/
 
 footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
   width: 100%;
+  height: var(--footer-ht);
 }
 
 footer > h3 {
@@ -178,20 +193,20 @@ footer > h3 {
 
 /* modal */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  width: min(375px, 40%);
-  margin: 5% auto; /* Only centers horizontally not vertically! */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-75%) scale(1);
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  border-radius: 5%;
-  padding: 1.5rem;
-}
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    width: min(375px, 40%);
+    height: auto; /* Adjust the height as needed */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+    border-radius: 5%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%); /* Center the modal */
+    padding: 1.25rem;
+  }
+  
 
 .feed-form {
   display: flex;
@@ -245,6 +260,8 @@ footer > h3 {
   position: fixed;
   top: 0;
   left: 0;
+  justify-content: center;
+  align-items: start;
   display: none;
   width: 100%;
   height: 100%;
@@ -256,7 +273,7 @@ footer > h3 {
 }
 
 :is(.active) {
-  display: block;
+  display: flex;
 }
 
 .switch {
